# MyGame

include/: Persons.h  anim.h  map.h  view.h
src/: Persons.cpp  anim.cpp  main.cpp  map.cpp
Соник и бомжи/: CMakeLists.txt
